# elide

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  FINDINGS.md  LICENSE-MIT  README.md  elide-dev.yaml
docs/: actor-offload-plan.md  architecture.md  attestation-readonly-enrollment-spec.md  coordinator-driven-snapshot-plan.md  coordinator-mint-enrollment-plan-v2.md  coordinator-mint-enrollment-plan.md  design-auth-model.md  design-auth-service.md  design-consistency-surface.md  design-coord-http-ipc.md  design-delta-compression.md  design-deploy-image-pipeline.md  design-deployment-modes.md  design-domain-store.md  design-extent-reclamation.md  design-file-aware-defrag.md  design-force-release-fencing.md  design-gc-bucket-unification.md  design-gc-partial-death-compaction.md  design-gc-ulid-ordering.md  design-iam-key-model.md  design-manifest-toml-removal.md  design-mint-template-seal.md  design-mint-volume-attestation.md  design-mint.md  design-name-event-log.md  design-noop-write-skip.md  design-oci-export.md  design-peer-segment-fetch.md  design-portable-live-volume.md  design-remote-coord-ipc.md  design-replica-model.md  design-segment-index.md  design-tigris-native.md  design-ublk-shutdown-park.md  design-ublk-transport.md  design-volume-event-log.md  design-volume-fetch.md  design-volume-size-ownership.md  finding-cargo-build-stale-read.md  (+27 more)
elide-attestation/: Cargo.toml
elide-attestation/src/: crypto.rs  lib.rs  lineage.rs  serve.rs
elide-coordinator/: Cargo.toml
elide-coordinator/fixtures/mint-e2e/: mint-elide.toml
elide-coordinator/fixtures/mint-e2e/elide_roles/: volume-ro.json  volume-rw.json
elide-coordinator/src/: attest.rs  bench.rs  bucket_position.rs  claim.rs  config.rs  control.rs  credential.rs  daemon.rs  delta.rs  dev_link.rs  eligibility.rs  enroll.rs  event_journal.rs  fetch.rs  force_claim.rs  fork.rs  gc.rs  gc_cycle.rs  identity.rs  import.rs  inbound.rs  ipc.rs  key_shadow.rs  lib.rs  lifecycle.rs  lineage_forest.rs  liveness.rs  log_init.rs  macaroon.rs  main.rs  mint_attested_e2e.rs  mint_client.rs  mint_stores.rs  name_claims.rs  name_event_store.rs  name_store.rs  peer_discovery.rs  pending_delete.rs  pidfile.rs  portable.rs  (+20 more)
elide-coordinator/src/inbound/: lifecycle.rs  mod.rs
elide-coordinator/tests/: gc_proptest.proptest-regressions  gc_proptest.rs  gc_test.rs  pending_delete_proptest.rs  portable_proptest.rs  retention_marker_proptest.rs  segment_head_proptest.rs
elide-core/: Cargo.toml  build.rs
elide-fetch/: Cargo.toml
elide-import/: Cargo.toml
elide-peer-fetch/: Cargo.toml
elide-peer-fetch/src/: ancestry.rs  auth.rs  body_token.rs  client.rs  hint.rs  lib.rs  range_fetcher.rs  server.rs  token.rs
elide-peer-fetch/src/discharge/: crypto.rs  mod.rs
elide-peer-fetch/tests/: two_coordinator.rs
mint/: Cargo.toml  README.md
rfds/: 0001-gc-output-ulid-ordering.md  0002-extent-index-lowest-ulid-wins.md  README.md  (+2 more)
(+308 files in other folders)
