[package]
name = "elide-attestation"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
axum             = "0.8"
base64           = "0.22"
blake3           = "1"
bytes            = "1"
chacha20poly1305 = "0.10"
ed25519-dalek    = { version = "2", features = ["rand_core"] }
elide-core       = { path = "../elide-core" }
object_store     = "0.11"
rand_core        = { version = "0.6", features = ["getrandom"] }
rmp              = "0.8"
serde            = { version = "1", features = ["derive"] }
thiserror        = "1"
tokio            = { version = "1", features = ["net", "rt-multi-thread", "macros", "time"] }
tracing          = "0.1"
ulid             = "1"

[dev-dependencies]
serde_json = "1"
tempfile   = "3"
