[package]
name = "elide-coordinator"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow       = "1"
bytes        = "1"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
clap         = { version = "4", features = ["derive"] }
object_store = { version = "0.11", features = ["aws"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
ulid         = "1"

[dev-dependencies]
tempfile = "3"
